fix bug with overflow

--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -11,7 +11,6 @@
 		width: 100%;
 		max-height: 100%;
 		position: relative;
-		padding-bottom: 10%;
 		img {
 			width: 100%;
 			height: 100%;
