--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -2,6 +2,7 @@
 	background-color: #101C26;
 	background-image: url(../assets/img/background.png);
 	height: 100%;
+	overflow: hidden;
 	&__wrapper {
 		padding-top: 10%;
 		padding-bottom: 2%;
