--- a/src/scss/blocks/_projects.scss
+++ b/src/scss/blocks/_projects.scss
@@ -1,6 +1,7 @@
 .projects {
 	margin-top: 140px;
 	height: 100%;
+	overflow: hidden;
 	&__carousel {
 		height: 800px;
 		&__wrapper {
