--- a/src/scss/blocks/_why-choose.scss
+++ b/src/scss/blocks/_why-choose.scss
@@ -11,7 +11,6 @@
 		width: 100%;
 		max-height: 100%;
 		position: relative;
-		padding-bottom: 10%;
 		img {
 			border-radius: 10px;
 			object-fit: cover;
@@ -23,7 +22,7 @@
 			}
 			&:nth-child(2) {
 				position: absolute;
-				top: 73%;
+				top: 80%;
 				left: 86%;
 				width: 182px;
 				height: 182px;
