--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -40,7 +40,6 @@ body {
 
 .container{
     padding: 0 5%;
-    overflow: hidden;
 }
 
 main {
